# ukb

./: .dir-locals.el  .gitignore  .travis.yml  00Readme.txt  INSTALL  Makefile  Makefile.in  README  README.md  Readme.txt  UKB-VERSION-GEN  boost-bug.txt  common.cc  common.h  compile_kb.cc  configFile.cc  configFile.h  configure  configure.in  coocGraph.cc  coocGraph.h  coocGraph2.cc  coocGraph2.h  create_cograph.cc  create_cograph2.cc  create_mcrbin.cc  csentence.cc  csentence.h  dgraph_info.cc  disambGraph.cc  disambGraph.h  fileElem.cc  fileElem.h  globalVars.cc  globalVars.h  hlex_agtree.cc  hlex_agtree.h  info_ukb.cc  kGraph.cc  kGraph.h  (+17 more)
UKBsim/: INSTALL  LICENSE  README  Similarity.pm  similarity.pl  similarity.pre.pl
contrib/perl-server/: example.pl  ukbProtocol.pm
contrib/python-server/: example.py  ukbprotocol.py
dotest/input/: ctx_dos.txt
dotest/scripts/: dgraph_bfs.sh  dgraph_dfs.sh  main_ppv.sh
scripts/: README  czwordnet2ukb.pl  gnet2ukb.pl  gnetXlinks.pl  wnet2dict.pl  wnet2graph.pl  wnetgloss2graph.pl  wnindex2ukbdict.pl
src/: .dir-locals.el  COPYING  Changelog  INSTALL  LICENSE  Makefile.in  README  UKB-VERSION-GEN  common.cc  common.h  compile_kb.cc  configFile.cc  configFile.h  configure  configure.in  convert2.0.cc  convert2csr.cc  csentence.cc  csentence.h  dfsa.h  disambGraph.cc  disambGraph.h  fileElem.cc  fileElem.h  globalVars.cc  globalVars.h  kbGraph.cc  kbGraph.h  kbGraph_common.cc  kbGraph_common.h  kbGraph_v16.cc  kbGraph_v16.h  nedwsd.cc  prank.h  spearman.pl  ukbServer.cc  ukbServer.h  ukb_ppv.cc  ukb_walkandprint.cc  ukb_wsd.cc  (+6 more)
src/dotest/: do_check.sh  dotest.sh
src/dotest/input/: ctx.txt  ctx_mini.txt  ctx_nodict.txt  dict.txt  dict_2.txt  test_graph.txt  test_graph_2.txt
src/dotest/scripts/: dgraph_bfs.sh  dgraph_dfs.sh  main_ppv.sh  main_wsd.sh  main_wsd_nodict.sh
wsdeval/: README  create_keyfile.pl  create_wnidmap.pl  ctx20words.pl  download_and_prepare_data.sh  evaluate.sh  run_experiments.sh  wsdeval2ukb.pl
